# yanvox

./: README.md
rust/: Cargo.toml
rust/yanvox/: Cargo.toml
rust/yanvox/examples/: voxel_volume_example.rs
rust/yanvox/src/: lib.rs  math.rs  voxel.rs  voxel_data.rs
rust/yanvox/src/mesh_generation/: algorithm.rs  marching_cubes.rs  mesh.rs  mesh_builder.rs  mod.rs
rust/yanvox/src/voxel/: internal_node.rs  leaf_node.rs  root_node.rs
rust/yanvox/src/voxel_data/: bool_voxel.rs  float_voxel.rs  int_voxel.rs
